--- a/views/login.html
+++ b/views/login.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -49,14 +50,14 @@
         data: formData,
         dataType: 'json',
         success: function (data) {
-          var err_code = data.err_code
-          if (err_code === 0) {
+          var code = data.code
+          if (code === 0) {
             // window.alert('注册成功！')
             // 服务端重定向针对异步请求无效
             window.location.href = '/'
-          } else if (err_code === 1) {
+          } else if (code === 1) {
             window.alert('邮箱或者密码错误')
-          } else if (err_code === 500) {
+          } else if (code === 500) {
             window.alert('服务器忙，请稍后重试！')
           }
         }
